Optimize Two Out Of Three solution